--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,7 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  email: MyString
+  email_address: one@email.com
+  password_digest: <%= ::BCrypt::Password.create("password") %>
 
 two:
-  email: MyString
+  email_address: two@email.com
+  password_digest: <%= ::BCrypt::Password.create("password") %>
